adding media queries

--- a/src/Components/Body/body.css
+++ b/src/Components/Body/body.css
@@ -19,7 +19,9 @@
     font-size: 4pc;
 }
 .Street{
-    color:cyan;
+    color:yellow;
+    font-style: italic;
+    font-size: 3pc;
 }
 .Waltz{
     color:white;
