--- a/src/Components/Body/body.css
+++ b/src/Components/Body/body.css
@@ -1,6 +1,6 @@
 .Ballroom{
     color:lightblue;
-    font-family:Impact, fantasy ;
+    font-family:Impact, ;
     font-weight: bold;
     font-size: 4pc;
     text-align: center;
